--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,31 @@
 @import '~antd/dist/antd.css';
-.layout {
-  height:100vh;
-  /* background-image: url('./images/background.jpg'); */
+
+.wrapper {
+  background: url('./images/background.jpg');
+  height: 100vh;
   background-repeat: no-repeat;
-  background-size:cover;
+  background-position: center;
+  background-size: cover;
+  background-position-y: -2px;
+}
+
+.abt {
+  background: url('./images/abtbg.jpg');
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.error{
+  display:none;
+}
+.navs {
+  display: none
+}
+
+.reg-logo {
+  display: none;
 }
 .logo {
   flex:0.5;
@@ -18,30 +40,33 @@ nav {
 border-bottom: 0.2px solid grey;
 display: flex;
 justify-content: space-between;
-height:50px;
+height:auto;
 position: sticky;
 top:0px;
 right:0px;
 left: 0px;
 bottom: 0px;
 scroll-behavior: smooth;
-scrollbar-arrow-color: #fff;
-  
+background-color: #132128;
+z-index: 999999999;
+
 }
 nav ul {
   display:flex;
   flex:1.5;
   justify-content: space-between;
-  font-size:18px;
+  font-size:14px;
   padding-top:10px;
   text-transform: capitalize;
 }
 
 nav ul li {
   list-style-type: none;
+  padding-top:10px;
 padding-right:20px;
-color:white;
+color:rgb(229, 226, 226);
 }
+
 .course {
   background: #56C870;
   height: 40px;
@@ -54,18 +79,11 @@ color:white;
   padding-top: 5px;
   color:grey;
 }
-.container {
-  background: url('./images//background.jpg');
-  height: 100vh;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-position-y: -2px;
-}
+
 
 .backdrop {
-  background: #173B3f;
-  height: 100vh;
+background: #173B3f;
+height: 115vh;
 opacity: 0.6;
 position: absolute;
 top:0;
@@ -92,7 +110,7 @@ z-index: 0;
 }
 .join {
   position:relative;
-  top:180px;
+  /* top:180px; */
   font-size:18px;
   text-transform: capitalize;
   margin-left: 3rem;
@@ -139,8 +157,8 @@ z-index: 0;
 }
 .more{
 width: 50%;
-display: flex;
 }
+
 .more  .span p {
   text-align: center;
   color:rgb(209, 206, 206);
@@ -276,10 +294,463 @@ height:70vh
 .titles {
   color:white;
 }
-@media screen  and (max-width: 500px){
-.first-section{
+.scale {
+  padding-top:50px;
+}
+.scale  h2  {
+ text-align: center;
+color: #132128
+ 
+}
+.scale p{
+text-align: center;
+color:#132128;
+font-family: Arial, Helvetica, sans-serif;
+}
+.skil{
+  height:70vh;
+}
+.skill {
+  display:grid;
+  grid-template-columns:auto auto auto auto;
+  margin-left:6%;
+}
+.skill  div{
+
+background-color: #fff;
+margin-top:50px;
+height:40px;
+width:250px;
+border-radius: 50px;
+text-align: center;
+padding-top:9px;
+font-weight: 700;
+text-transform: capitalize;
+color: #132128
+}
+.skill div:hover {
+  color:#56C870;
+ transition: all .16s ease-in-out ;
+  transform: translate(2px,2px);
+  box-shadow: rgb(202, 68, 68);
+}
+
+.footer {
+  display:flex;
+  height:50vh;
+  background-color: #173B3f;
+  color:white;
+  position: sticky;
+  bottom: 0;
+}
+
+.policies{
+flex:1;
+padding-top: 50px;
+display: flex;
+flex-direction: column;
+}
+.policies p {
+  padding: 0.5rem;
+    font-weight: 500;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
+    font-size: 14px;
+    text-align: center;
+}
+.courses {
+flex:1;
+padding-top: 50px;
+justify-content: center;
+}
+.courses ul {
+  list-style: none;
+}
+.courses ul li {
+  padding: 0.5rem;
+  font-weight: 500;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: capitalize;
+  font-size: 14px;
+  text-align: center;
+}
+.social-media {
+  flex:1;
+}
+.contact-divider {
+  margin-bottom: 100px;
+}
+.contatc {
+background: #fafafa;
+}
+.contact-us {
+
+  width:50%;
+  margin: auto;
+}
+.wrappers {
   display: flex;
+  justify-content: space-around;
+  margin: auto;
+  padding-top: 50px;
+  padding-bottom: 15px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  color: #707070
+}
+
+.staff {
+  height: 100%;
+  background: #f3f4f4;
+}
+  h3 {
+    padding-top: 7rem;
+    text-align: center;
+    color: rgb(39, 156, 245)
+  }
+
+  .staff p {
+    text-align: center;
+    font-size: 14.5px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #787878;
+    padding-top: 20px
+  }
+
+.testimony {
+  display: flex;
+  padding-top: 40px;
+  justify-content: space-around;
+
+}
+
+@media only screen and (min-width: 300px) and (max-width: 650px) {
+  .wrappers {
+    display: block;
+  }
+
+  .testimony {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  .card {
+    margin: auto;
+    margin-top: 10px;
+    width: 15rem;
+  }
+}
+
+@media only screen and (min-width: 650px) and (max-width: 800px) {
+  .wrappers {
+    display: flex;
+  }
+
+  .testimony {
+    display: block;
+    width: 100%;
+
+  }
+
+  .card {
+    margin: auto;
+    margin-top: 10px;
+    width: 15rem;
+    height: 100%;
+  }
+}
+@media screen  and (max-width: 500px){
+  .error{
+    display: block;
+  }
+.backdrop {
+  height:100vh;
+}
+nav {
+  display: none;
+}
+.brilliance p{
+  top:100px;
+  padding-left:30%;
+}
+.join p{
+margin-top: 150px;
+}
+.skill {
+  display:flex;
   flex-direction: column;
-  flex-wrap: wrap;
+ padding-bottom: 3rem;
+}
+.skill div {
+  margin-left:9%;
+  width:80%;
+
+}
+.skil {
+  height:auto;
+}
+
+.footer {
+  height: auto;
+ display:flex;
+
+}
+.courses{
+
+}
+.joinus {
+  margin-left:6rem;
+  top:-60px;
+}
+.brilliance {
+  font-style: italic;
+}
+
+.first-section{
+  flex-direction: column;
+  padding-bottom: 4rem;
+}
+.launch {
+  width:100%;
+padding:0.5rem
+
+}
+.launch p {
+  width:100%;
+}
+
+.more .span{
+  margin-left:60%;
+}
+
+.mid-section {
+  flex-direction: column-reverse;
+  height:auto;
+}
+.left-img {
+  width:100%;
+  padding:0px;
+  margin:0;
+}
+
+
+.left-img img {
+  width: 20rem;
+  height: auto;
+}
+.future {
+  width: 100%;
+}
+
+.team {
+  flex-direction: column;
+  height:auto;
+  padding-bottom: 4rem;
+}
+.team-right{
+  margin:0;
+}
+.steps {
+  margin-left:1%;
+}
+.steps-action{
+  margin-left: 2rem;
+}
+.navs {
+  display:block;
+  position:absolute;
+  top:0px;
+  z-index: 1000000;
+}
+.regwrapper .left{
+  display:none;
+}
+.reg-logo{
+  display:block;
+}
+.reg-logo h1 {
+
+  text-align:center;
+  padding-top:20px;
+}
+.reg-logo p {
+  color:#000000CC;
+  font-size:16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 300;
+}
+.green {
+  color:#56C870;
+
 }
 }
+
+
+@media  screen and (max-width:1024px) {
+.backdrop {
+    height: 100vh;
+  }
+
+  nav {
+    display: none;
+  }
+
+  .brilliance p {
+    top: 100px;
+    padding-left: 30%;
+  }
+
+  .join p {
+    margin-top: 150px;
+  }
+
+  .skill {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 3rem;
+  }
+
+  .skill div {
+    margin-left: 9%;
+    width: 80%;
+
+  }
+
+  .skil {
+    height: auto;
+  }
+
+  .footer {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .joinus {
+    right:40px;
+    top: -80px;
+  }
+
+  .brilliance {
+    font-style: italic;
+    
+  }
+
+  .first-section {
+    flex-direction: column;
+    padding-bottom: 4rem;
+  }
+
+  .launch {
+    width: 100%;
+    padding: 0.5rem
+  }
+
+  .launch p {
+    width: 100%;
+  }
+
+  .more .span {
+    margin-left: 60%;
+  }
+
+  .mid-section {
+    height: auto;
+  }
+
+  .left-img {
+    width: 100%;
+    padding: 0px;
+    margin: 0;
+  }
+
+
+  .left-img img {
+    width: 20rem;
+    height: auto;
+  }
+
+  .future {
+    width: 100%;
+  }
+
+  .team {
+    flex-direction: column;
+    height: auto;
+    padding-bottom: 4rem;
+  }
+
+  .team-right {
+    width:80%;
+    margin: 0 auto;
+  }
+  .team-left {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content:center;
+  }
+
+  .steps {
+    margin-left: 1%;
+  }
+
+  .steps-action {
+    margin-left: 2rem;
+  }
+
+  .navs {
+    display: block;
+    position: absolute;
+    top: 0px;
+    z-index: 1000000;
+  }
+
+  .regwrapper .left {
+    display: none;
+  }
+
+  .reg-logo {
+    display: block;
+  }
+
+  .reg-logo h1 {
+
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .reg-logo p {
+    color: #000000CC;
+    font-size: 16px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+  }
+
+  .green {
+    color: #56C870;
+
+  }
+} 
+
+/* @media screen and (max-width:1030px){
+  
+        .mid-section {
+        display: flex;
+        height: 31vh;
+        }
+
+        .skil {
+        height: 30vh;
+        }
+        .team {
+        display: flex;
+        background: #173B3f;
+        z-index: -10;
+        height: 40vh;
+        }
+} */
