--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,34 @@
  a {
      color: white;
+     font-size: 14px;
  }
-
+.sess:hover {
+color:black;
+}
  a:hover{
     color:#56C870 ;
+ }
+ .session {
+     position: absolute;
+     top: 514px;
+     left: 154px;
+     background: #56C870;
+     height: 50px;
+     width: 150px;
+     text-align: center;
+     padding-top: 10px;
+     border-radius: 30px;
+     color: white;
+     font-weight: 600;
+     cursor: pointer;
+ }
+ @media only screen and (min-width: 300px) and (max-width: 650px) {
+    .session{
+        left:20%;
+    }
+    .modal {
+        position: absolute;
+        top:200px;
+        z-index: 99999999999999999;
+    }
  }
