--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ color:black;
  .session {
      position: absolute;
      top: 505px;
-     left: 43px;
+     left: 16%;
      background: #56C870;
      height: 50px;
      width: 226px;
@@ -53,4 +53,12 @@ color:black;
         width: 90%;
         margin-left: 20px;
     }
+ }
+
+ @media screen and  (min-width: 320px) and (max-width: 425px) {
+    .session {
+    
+            left: 18%;
+    
+        }
  }
